--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     }
   },
   "dependencies": {
+    "core-js": "^3.0.1",
     "debug": "^3.1.0",
     "flickity": "^2.0.10",
     "flickity-imagesloaded": "^2.0.0",
