--- a/package.json
+++ b/package.json
@@ -18,26 +18,6 @@
     "last 2 versions",
     "Firefox ESR"
   ],
-  "stylelint": {
-    "extends": "stylelint-config-standard",
-    "rules": {
-      "at-rule-no-unknown": [
-        true,
-        {
-          "ignoreAtRules": [
-            "define-mixin",
-            "mixin"
-          ]
-        }
-      ]
-    }
-  },
-  "eslintConfig": {
-    "extends": "eslint-config-airbnb-base",
-    "env": {
-      "browser": true
-    }
-  },
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.0.1",
@@ -48,6 +28,7 @@
     "normalize.css": "^7.0.0",
     "pretty-error": "^2.1.1",
     "smoothscroll-polyfill": "^0.4.0",
+    "tailwindcss": "^1.0.4",
     "what-input": "^5.0.4",
     "xml-js": "^1.6.2"
   },
