--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.3.3",
-    "debug": "^3.1.0",
+    "debug": "^4.0.0",
     "flickity": "^2.2.1",
     "flickity-imagesloaded": "^2.0.0",
     "jquery": "^3.4.1",
-    "normalize.css": "^7.0.0",
+    "normalize.css": "^8.0.0",
     "pretty-error": "^2.1.1",
     "smoothscroll-polyfill": "^0.4.0",
-    "tailwindcss": "^1.1.2",
+    "tailwindcss": "^1.1.3",
     "what-input": "^5.2.6",
     "xml-js": "^1.6.2"
   },
@@ -37,27 +37,28 @@
     "@babel/preset-env": "^7.6.3",
     "babel-loader": "^8.0.0-beta.0",
     "browser-sync": "^2.23.5",
-    "browser-sync-webpack-plugin": "^1.2.0",
-    "clean-webpack-plugin": "^0.1.17",
-    "cross-env": "^5.2.1",
-    "css-loader": "^3.2.0",
+    "browser-sync-webpack-plugin": "^2.0.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^6.0.0",
     "cssnano": "^4.1.10",
-    "eslint": "^4.15.0",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint": "^6.0.0",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "extract-loader": "^1.0.2",
-    "file-loader": "^1.1.6",
+    "extract-loader": "^3.0.0",
+    "file-loader": "^4.0.0",
     "html-loader": "^0.5.4",
     "npm-run-all": "^4.1.2",
     "nunjucks-html-loader": "^1.1.0",
     "postcss-cssnext": "^3.0.2",
-    "postcss-import": "^11.0.0",
-    "postcss-inline-svg": "^3.0.0",
-    "postcss-loader": "^2.0.10",
+    "postcss-import": "^12.0.0",
+    "postcss-inline-svg": "^4.0.0",
+    "postcss-loader": "^3.0.0",
     "postcss-mixins": "^6.2.2",
     "stylelint": "^11.1.1",
-    "stylelint-config-standard": "^18.0.0",
+    "stylelint-config-standard": "^19.0.0",
     "svgo": "^1.3.0",
-    "webpack": "^3.10.0"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^3.3.9"
   }
 }
