--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "postcss-inline-svg": "^4.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-mixins": "^6.2.2",
+    "proxy-polyfill": "^0.3.0",
     "stylelint": "^11.1.1",
     "stylelint-config-standard": "^19.0.0",
     "svgo": "^1.3.0",
